--- a/views/index.html
+++ b/views/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE HTML>
-<html><head><title>gram.no.de</title></head><body><h1>gram.no.de</h1><p>Powered by <a href="http://nodejs.org/">nodejs.org</a></p></body></html>
+<html>
+    <head>
+        <title>gram.no.de</title>
+    </head>
+    <body>
+        <h1>gram.no.de</h1>
+        <p>Powered by <a href="http://nodejs.org/">nodejs.org</a></p>
+    </body>
+</html>
