--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>gram.no.de</title>
+        <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
         <h1>gram.no.de</h1>
