--- a/pub/style.css
+++ b/pub/style.css
@@ -2,10 +2,33 @@ body {
     background-color: #EEE;
     font-family: Helvetica, Sans;
     font-size: 1.1em;
-    padding: 80px;
+    padding: 20px 80px;
 }
 
 h1 {
     color: #BBB;
     text-shadow: 2px 3px 1px #999;
+}
+
+.point {
+    display:block;
+    height:1px;
+    width:1px;
+    background-color:#000;
+    position:absolute;
+}
+
+.mark {
+    height:10px;
+    width:10px;
+    background-color:#F00;
+    border-radius: 5px;
+}
+
+#draw {
+    height:450px;
+    width:850px;
+    position:relative;
+    overflow:hidden;
+    border:1px solid;
 }
